add_subdirectory(clock)
add_subdirectory(colors)
add_subdirectory(desktopthemedetails)
add_subdirectory(joystick)
add_subdirectory(kcmaccess)
add_subdirectory(kcmstyle)
add_subdirectory(solid-actions)
add_subdirectory(solid-hardware)
add_subdirectory(splashscreen)
add_subdirectory(powerdevil)

if ( Q_WS_X11 )
add_subdirectory(autostart)
add_subdirectory(bell)
add_subdirectory(cursortheme)
add_subdirectory(fonts)
add_subdirectory(fontinst)
add_subdirectory(keys)
add_subdirectory(keyboard)
add_subdirectory(mouse)
add_subdirectory(paths)
add_subdirectory(kcmsmserver)
add_subdirectory(khotkeys)
endif ()
